// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<WithTranslationContextComponent
  translations={null}
>
  <Login
    footer={null}
    hasError={false}
    logoUrl={null}
    onChangeHandler={null}
    submitHandler={null}
    title={null}
    translations={
      Object {
        "email": "E-mail",
        "invalidUsernameOrPassword": "Invalid username or password",
        "password": "Password",
        "signIn": "Sign in",
      }
    }
    usernameType="email"
  >
    <div
      className="root"
    >
      <div
        className="box"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="mb-3"
          >
            <TextField
              changeHandler={[Function]}
              disabled={false}
              fieldId="email"
              fullWidth={true}
              helperText={null}
              inputSize={null}
              isLabelVisible={true}
              label="E-mail"
              layout="vertical"
              placeholder={null}
              required={true}
              size="medium"
              type="email"
              validationState={null}
              variant="outline"
            >
              <label
                className="root
        isRootFullWidth
        rootLayoutVertical
        isRootRequired
        rootSizeMedium
        
        rootVariantOutline"
                htmlFor="email"
              >
                <div
                  className="label"
                >
                  E-mail
                </div>
                <div
                  className="inputContainer"
                >
                  <input
                    className="input"
                    disabled={false}
                    id="email"
                    onChange={[Function]}
                    placeholder={null}
                    required={true}
                    size={null}
                    type="email"
                  />
                </div>
              </label>
            </TextField>
            <TextField
              changeHandler={[Function]}
              disabled={false}
              fieldId="password"
              fullWidth={true}
              helperText={null}
              inputSize={null}
              isLabelVisible={true}
              label="Password"
              layout="vertical"
              placeholder={null}
              required={true}
              size="medium"
              type="password"
              validationState={null}
              variant="outline"
            >
              <label
                className="root
        isRootFullWidth
        rootLayoutVertical
        isRootRequired
        rootSizeMedium
        
        rootVariantOutline"
                htmlFor="password"
              >
                <div
                  className="label"
                >
                  Password
                </div>
                <div
                  className="inputContainer"
                >
                  <input
                    className="input"
                    disabled={false}
                    id="password"
                    onChange={[Function]}
                    placeholder={null}
                    required={true}
                    size={null}
                    type="password"
                  />
                </div>
              </label>
            </TextField>
          </div>
          <Button
            block={true}
            clickHandler={null}
            disabled={false}
            icon={null}
            iconPosition="before"
            label="Sign in"
            labelVisibility="all"
            loading={false}
            priority="default"
            size="medium"
            type="submit"
            variant="primary"
          >
            <button
              className="root
        priorityDefault
        sizeMedium
        variantPrimary
        isRootBlock"
              disabled={false}
              onClick={null}
              title={null}
              type="submit"
            >
              <span
                className="label"
              >
                Sign in
              </span>
            </button>
          </Button>
        </form>
      </div>
    </div>
  </Login>
</WithTranslationContextComponent>
`;

exports[`rendering renders correctly with all props except translations 1`] = `
<WithTranslationContextComponent
  footer={
    <a
      href="http://example.com"
    >
      link
    </a>
  }
  hasError={true}
  logo="http://satyr.io/100x100/33?text=logo"
  title="Company"
  translations={null}
>
  <Login
    footer={
      <a
        href="http://example.com"
      >
        link
      </a>
    }
    hasError={true}
    logo="http://satyr.io/100x100/33?text=logo"
    logoUrl={null}
    onChangeHandler={null}
    submitHandler={null}
    title="Company"
    translations={
      Object {
        "email": "E-mail",
        "invalidUsernameOrPassword": "Invalid username or password",
        "password": "Password",
        "signIn": "Sign in",
      }
    }
    usernameType="email"
  >
    <div
      className="root"
    >
      <div
        className="title"
      >
        Company
      </div>
      <div
        className="box"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="error"
          >
            Invalid username or password
          </div>
          <div
            className="mb-3"
          >
            <TextField
              changeHandler={[Function]}
              disabled={false}
              fieldId="email"
              fullWidth={true}
              helperText={null}
              inputSize={null}
              isLabelVisible={true}
              label="E-mail"
              layout="vertical"
              placeholder={null}
              required={true}
              size="medium"
              type="email"
              validationState={null}
              variant="outline"
            >
              <label
                className="root
        isRootFullWidth
        rootLayoutVertical
        isRootRequired
        rootSizeMedium
        
        rootVariantOutline"
                htmlFor="email"
              >
                <div
                  className="label"
                >
                  E-mail
                </div>
                <div
                  className="inputContainer"
                >
                  <input
                    className="input"
                    disabled={false}
                    id="email"
                    onChange={[Function]}
                    placeholder={null}
                    required={true}
                    size={null}
                    type="email"
                  />
                </div>
              </label>
            </TextField>
            <TextField
              changeHandler={[Function]}
              disabled={false}
              fieldId="password"
              fullWidth={true}
              helperText={null}
              inputSize={null}
              isLabelVisible={true}
              label="Password"
              layout="vertical"
              placeholder={null}
              required={true}
              size="medium"
              type="password"
              validationState={null}
              variant="outline"
            >
              <label
                className="root
        isRootFullWidth
        rootLayoutVertical
        isRootRequired
        rootSizeMedium
        
        rootVariantOutline"
                htmlFor="password"
              >
                <div
                  className="label"
                >
                  Password
                </div>
                <div
                  className="inputContainer"
                >
                  <input
                    className="input"
                    disabled={false}
                    id="password"
                    onChange={[Function]}
                    placeholder={null}
                    required={true}
                    size={null}
                    type="password"
                  />
                </div>
              </label>
            </TextField>
          </div>
          <Button
            block={true}
            clickHandler={null}
            disabled={false}
            icon={null}
            iconPosition="before"
            label="Sign in"
            labelVisibility="all"
            loading={false}
            priority="default"
            size="medium"
            type="submit"
            variant="primary"
          >
            <button
              className="root
        priorityDefault
        sizeMedium
        variantPrimary
        isRootBlock"
              disabled={false}
              onClick={null}
              title={null}
              type="submit"
            >
              <span
                className="label"
              >
                Sign in
              </span>
            </button>
          </Button>
        </form>
        <div
          className="footer"
        >
          <a
            href="http://example.com"
          >
            link
          </a>
        </div>
      </div>
    </div>
  </Login>
</WithTranslationContextComponent>
`;

exports[`rendering renders correctly with translations 1`] = `
<WithTranslationContextComponent
  translations={
    Object {
      "email": "E-mail",
      "invalidUsernameOrPassword": "Nesprávný e-mail nebo heslo",
      "password": "Heslo",
      "signIn": "Přihlásit se",
    }
  }
>
  <Login
    footer={null}
    hasError={false}
    logoUrl={null}
    onChangeHandler={null}
    submitHandler={null}
    title={null}
    translations={
      Object {
        "email": "E-mail",
        "invalidUsernameOrPassword": "Nesprávný e-mail nebo heslo",
        "password": "Heslo",
        "signIn": "Přihlásit se",
      }
    }
    usernameType="email"
  >
    <div
      className="root"
    >
      <div
        className="box"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="mb-3"
          >
            <TextField
              changeHandler={[Function]}
              disabled={false}
              fieldId="email"
              fullWidth={true}
              helperText={null}
              inputSize={null}
              isLabelVisible={true}
              label="E-mail"
              layout="vertical"
              placeholder={null}
              required={true}
              size="medium"
              type="email"
              validationState={null}
              variant="outline"
            >
              <label
                className="root
        isRootFullWidth
        rootLayoutVertical
        isRootRequired
        rootSizeMedium
        
        rootVariantOutline"
                htmlFor="email"
              >
                <div
                  className="label"
                >
                  E-mail
                </div>
                <div
                  className="inputContainer"
                >
                  <input
                    className="input"
                    disabled={false}
                    id="email"
                    onChange={[Function]}
                    placeholder={null}
                    required={true}
                    size={null}
                    type="email"
                  />
                </div>
              </label>
            </TextField>
            <TextField
              changeHandler={[Function]}
              disabled={false}
              fieldId="password"
              fullWidth={true}
              helperText={null}
              inputSize={null}
              isLabelVisible={true}
              label="Heslo"
              layout="vertical"
              placeholder={null}
              required={true}
              size="medium"
              type="password"
              validationState={null}
              variant="outline"
            >
              <label
                className="root
        isRootFullWidth
        rootLayoutVertical
        isRootRequired
        rootSizeMedium
        
        rootVariantOutline"
                htmlFor="password"
              >
                <div
                  className="label"
                >
                  Heslo
                </div>
                <div
                  className="inputContainer"
                >
                  <input
                    className="input"
                    disabled={false}
                    id="password"
                    onChange={[Function]}
                    placeholder={null}
                    required={true}
                    size={null}
                    type="password"
                  />
                </div>
              </label>
            </TextField>
          </div>
          <Button
            block={true}
            clickHandler={null}
            disabled={false}
            icon={null}
            iconPosition="before"
            label="Přihlásit se"
            labelVisibility="all"
            loading={false}
            priority="default"
            size="medium"
            type="submit"
            variant="primary"
          >
            <button
              className="root
        priorityDefault
        sizeMedium
        variantPrimary
        isRootBlock"
              disabled={false}
              onClick={null}
              title={null}
              type="submit"
            >
              <span
                className="label"
              >
                Přihlásit se
              </span>
            </button>
          </Button>
        </form>
      </div>
    </div>
  </Login>
</WithTranslationContextComponent>
`;

exports[`rendering renders correctly with username 1`] = `
<WithTranslationContextComponent
  translations={null}
  usernameType="Username"
>
  <Login
    footer={null}
    hasError={false}
    logoUrl={null}
    onChangeHandler={null}
    submitHandler={null}
    title={null}
    translations={
      Object {
        "email": "E-mail",
        "invalidUsernameOrPassword": "Invalid username or password",
        "password": "Password",
        "signIn": "Sign in",
      }
    }
    usernameType="Username"
  >
    <div
      className="root"
    >
      <div
        className="box"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="mb-3"
          >
            <TextField
              changeHandler={[Function]}
              disabled={false}
              fieldId="Username"
              fullWidth={true}
              helperText={null}
              inputSize={null}
              isLabelVisible={true}
              label="Username"
              layout="vertical"
              placeholder={null}
              required={true}
              size="medium"
              type="text"
              validationState={null}
              variant="outline"
            >
              <label
                className="root
        isRootFullWidth
        rootLayoutVertical
        isRootRequired
        rootSizeMedium
        
        rootVariantOutline"
                htmlFor="Username"
              >
                <div
                  className="label"
                >
                  Username
                </div>
                <div
                  className="inputContainer"
                >
                  <input
                    className="input"
                    disabled={false}
                    id="Username"
                    onChange={[Function]}
                    placeholder={null}
                    required={true}
                    size={null}
                    type="text"
                  />
                </div>
              </label>
            </TextField>
            <TextField
              changeHandler={[Function]}
              disabled={false}
              fieldId="password"
              fullWidth={true}
              helperText={null}
              inputSize={null}
              isLabelVisible={true}
              label="Password"
              layout="vertical"
              placeholder={null}
              required={true}
              size="medium"
              type="password"
              validationState={null}
              variant="outline"
            >
              <label
                className="root
        isRootFullWidth
        rootLayoutVertical
        isRootRequired
        rootSizeMedium
        
        rootVariantOutline"
                htmlFor="password"
              >
                <div
                  className="label"
                >
                  Password
                </div>
                <div
                  className="inputContainer"
                >
                  <input
                    className="input"
                    disabled={false}
                    id="password"
                    onChange={[Function]}
                    placeholder={null}
                    required={true}
                    size={null}
                    type="password"
                  />
                </div>
              </label>
            </TextField>
          </div>
          <Button
            block={true}
            clickHandler={null}
            disabled={false}
            icon={null}
            iconPosition="before"
            label="Sign in"
            labelVisibility="all"
            loading={false}
            priority="default"
            size="medium"
            type="submit"
            variant="primary"
          >
            <button
              className="root
        priorityDefault
        sizeMedium
        variantPrimary
        isRootBlock"
              disabled={false}
              onClick={null}
              title={null}
              type="submit"
            >
              <span
                className="label"
              >
                Sign in
              </span>
            </button>
          </Button>
        </form>
      </div>
    </div>
  </Login>
</WithTranslationContextComponent>
`;
